# Vision_Modules

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demos/: detect_video.py  detect_webcam.py  markers_image.py  segment_image.py
eval/: coco_eval.py
rvm/: api.py
rvm/cli/: detect.py  eval_coco.py  markers.py  segment.py
rvm/core/: types.py  visualize.py
rvm/detect/: yolo.py
rvm/io/: loader.py  writer.py
rvm/markers/: aruco.py  barcodes.py
rvm/segment/: sam_lite.py
tests/: tes_api_smoke.py  test_coco_eval.py  test_visualize.py
